crates/djls-semantic/tests/snapshots/validation__snapshot_multiple_error_types.snap
---
source: crates/djls-semantic/tests/validation.rs
expression: rendered
---
error[S116]: Filter 'title' does not accept an argument
 --> test.html:1:10
  |
1 | {{ value|title:"unwanted" }}
  |          ^^^^^^^^^^^^^^^^
error[S114]: Not expecting '==' in this position in if tag.
 --> test.html:2:1
  |
2 | {% if == broken %}bad{% endif %}
  | ^^^^^^^^^^^^^^^^^^
error[S116]: Filter 'lower' does not accept an argument
 --> test.html:3:9
  |
3 | {{ text|lower:"arg" }}
  |         ^^^^^^^^^^^
error[S115]: Filter 'truncatewords' requires an argument
 --> test.html:5:11
  |
5 | {{ result|truncatewords }}
  |           ^^^^^^^^^^^^^
